test/parser/process/017.stderr
At: "017.hac":4:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(null) 
#STATE#	keyword: template [3:1..8]
#STATE#	< [3:10]
#STATE#	list<(template-formal-decl)>: (template-formal-decl) ... [3:11..24]
#STATE#	; [3:25]
#STATE#	paramtype: pbool [3:27..31]
#STATE#	identifier: water [3:33..37]
#STATE#	list<(expr)>: (id-expr): H ... [3:39..45]
#STATE#	keyword: defproc [4:1..7]
in state #STATE#, possible rules are:
	optional_dense_range_list : dense_range_list .  (#RULE#)
	dense_range_list : dense_range_list . bracketed_dense_range  (#RULE#)
acceptable tokens are: 
	'&' (reduce)
	'(' (reduce)
	')' (reduce)
	'+' (reduce)
	',' (reduce)
	'-' (reduce)
	';' (reduce)
	'<' (reduce)
	'=' (reduce)
	'>' (reduce)
	'[' (shift)
	'|' (reduce)
	'}' (reduce)
	IMPLIES (reduce)
	RARROW (reduce)
